[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/BountyRaised.gd" type="Script" id=1]
[ext_resource path="res://assets/img/background-wood.png" type="Texture" id=2]
[ext_resource path="res://assets/img/poster2.png" type="Texture" id=3]
[ext_resource path="res://assets/img/sheriff.png" type="Texture" id=4]
[ext_resource path="res://assets/font/big_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/font/small_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/font/title_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://ScreenTransition.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "display_bounty"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sheriff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 1.8, 2, 2.2, 2.5, 2.8, 3, 3.3, 3.5, 3.7, 4, 4.3, 4.5, 4.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -243.907, 561.202 ), Vector2( -139.005, 525.745 ), Vector2( -69.071, 561.202 ), Vector2( 35.831, 525.745 ), Vector2( 105.765, 561.202 ), Vector2( 210.667, 525.745 ), Vector2( 280.601, 561.202 ), Vector2( 385.503, 525.745 ), Vector2( 455.437, 561.202 ), Vector2( 455.437, 516.881 ), Vector2( 455.437, 533.502 ), Vector2( 455.437, 499.152 ), Vector2( 455.437, 561.202 ), Vector2( 350.536, 525.745 ), Vector2( 280.601, 561.202 ), Vector2( 210.667, 525.745 ), Vector2( 105.765, 561.202 ), Vector2( 0.863, 525.745 ), Vector2( -69.071, 561.202 ), Vector2( -173.973, 525.745 ), Vector2( -243.907, 561.202 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sheriff:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sheriff:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.2, 2.5, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -6.10735, 20.2387, -3.66045, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Poster:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="BoutyRaised" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Poster" type="Sprite" parent="Node2D"]
position = Vector2( 442.105, 311.358 )
rotation = 0.152057
scale = Vector2( 1.83275, 1.83275 )
texture = ExtResource( 3 )

[node name="Sheriff" type="Position2D" parent="Node2D"]
position = Vector2( -243.907, 561.202 )
scale = Vector2( -1, 1 )

[node name="Sprite" type="Sprite" parent="Node2D/Sheriff"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -176.995 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/display_bounty = SubResource( 1 )

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control2/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="Control2/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="Control2/VBoxContainer"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer"]
margin_top = 22.0
margin_right = 800.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "WELL DONE!"
align = 1

[node name="Control" type="Control" parent="Control/VBoxContainer"]
margin_top = 104.0
margin_right = 800.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -50.0
margin_right = 400.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 6 )
text = "CLICK to continue"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )

[node name="CenterContainer" type="CenterContainer" parent="Control/VBoxContainer/MarginContainer2"]
margin_right = 800.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer2/CenterContainer"]
margin_left = 164.0
margin_top = 32.0
margin_right = 635.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer"]
margin_right = 420.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
text = "Congratulation! Your bounty is now:"
align = 2

[node name="Bounty" type="Label" parent="Control/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer"]
margin_left = 424.0
margin_right = 471.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0784314, 0.501961, 0.176471, 1 )
text = "$000"

[node name="Timer" type="Timer" parent="."]

[node name="ScreenTransition" parent="." instance=ExtResource( 8 )]

[connection signal="animation_finished" from="Node2D/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="faded_out" from="ScreenTransition" to="." method="_on_ScreenTransition_faded_out"]
